    you need on the simulator.

  [Martin]
  (infrastructure)
  * Cleanups in configury with regard to compile optimization/warning flags.
    Also add -fno-loop-optimize to any powerpc since it's the optimization
    killing gcc (< 3.4.0).
  * Doxygen cleanups: move MSG examples, kill the second Doxygen phase
    needed by MSG examples complications
  
  (xbt)
  * Bugfix: XBT_LOG_NEW_DEFAULT_CATEGORY now compiles without compiler
    warning (thanks loris for stumbling into this one).
    
  (gras)
  * Change SIMGRID_INSTALL_PATH to GRAS_ROOT in Makefiles generated for user.
  * Rename gras_get_my_fqdn to gras_os_myname and implement it in the simulator
    RL would imply a DNS resolver, which is *hard* to do in a portable way
    (and therefore delayed).

 --

SimGrid (2.93) unstable; urgency=low

  Alpha 4 on the path to SimGrid 3 (aka the "neuf-trois" version)

  [Arnaud]
   - Use Paje properly where used. Still to be sanitized properly.
   - Portability fix: Add an implementation of the contexts using pthread

  [Martin]
  (misc)
   - Add xbt_procname(): returns the name of the current process.
     Use it to show the current process's name in all logging.
  (infrastructure)
   - fix detection of older flex version and the reaction, since we do
     depend on modern ones (we use lex_destroy)
   - Better separation of SG and RL in the libs: remove all simulation code
     from libgras. As a result, this lib is now only 200k when stripped.
     Some of the xbt modules may also be duplicated (two sets and such) and
     should be cleaned/killed before SG3.
   - Insist on using xlC on AIX because of weird problems involving gcc there.
   - Cleanup the make remote stuff. This is now done by scripts
     tools/graspe-{master,slave} (GRAS Platform Expender). This is still
     mainly for our private use, but we're working on changing them to user
     tools, too.
  (gras)
   - Bugfix: flush the socket on close only if there is some *output*.