@@ -1,0 +1,7 @@
+dnl SG_CONFIGURE_PART(MESSAGE)
+dnl Idea borrowed from PHP, which borrowed it from mm
+AC_DEFUN([SG_CONFIGURE_PART],[
+  AC_MSG_RESULT()
+  AC_MSG_RESULT([${T_MD}$1${T_ME}])
+])
+    
